sass/components/featured-records/_featured-records.scss
.featured-records {
    display: flex;
    flex-wrap: wrap;
    gap: 18px;

    .featured {
        flex-basis: 100%;
        list-style: none;
        margin-bottom: 0;
        padding-left: 0;

        .resource {
            display: flex;
            border: 1px solid $color__hr;
            gap: 30px;
            margin-bottom: 0;
            padding: 30px;

            @media(min-width: $sm) {
                padding: 20px;
            }

            @media(min-width: $lg) {
                flex: 1;
            }

            &__thumbnail {
                flex-shrink: 0;
                max-width: 100%;
                max-height: 300px;

                @media(min-width: $lg) {
                    max-height: 350px;
                    max-width: 50%;
                }

                img {
                    object-fit: cover;
                    width: 100%;
                    height: 100%;
                }
            }

            &__content {
                padding: 0;
            }
        }

        &--primary {
            .description.fadeout {
                max-height: none;
                overflow: auto;
    
                &::after {
                    content: none;
                }
            }
    
            .resource {
                background-repeat: no-repeat;
                background-position: center;
                background-size: cover;
                color: $color__white;
                flex-wrap: wrap;
                justify-content: center;
                position: relative;

                @media(min-width: $lg) {
                    flex-wrap: nowrap;
                }
    
                &::after {
                    content: "";
                    position: absolute;
                    width: 100%;
                    height: 100%;
                    z-index: 1;
                    background-color: $color__secondary-dark;
                    left: 0;
                    top: 0;
                    opacity: 0.92;
                }
    
                &__thumbnail,
                &__content {
                    z-index: 2;
                }
    
                a:not(.record-tag) {
                    color: $color__white;
    
                    &:visited,
                    &:hover,
                    &:focus,
                    &:active {
                        color: $color__white;
                    }
                }
            }
        }
    
        &--secondary {
            display: flex;
            flex-direction: column;
            gap: 18px;
    
            @media(min-width: $lg) {
                flex-direction: row;
            }
    
            .resource {
                flex-direction: column;

                @media(min-width: $sm) {
                    flex-direction: row;
                }

                &__thumbnail {
                    align-self: center;
                    max-width: 100%;

                    @media(min-width: $sm) {
                        align-self: flex-start;
                        max-width: 40%;
                    }
                }
            }
        }
    }
}

